--- a/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
+++ b/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
@@ -51,32 +51,47 @@ usage=\
   The target Gateway may be identified by URL, hostname or by both\n\
   hostname and port number.\n\
   \n\
-  Commands:\n\
+  General commands:\n\
   \n\
   \tenumerate : Listing for the specified type.\n\
   \tget       : Retrieve an instance of a specified type.\n\
   \tput       : Update an instance of a specified type.\n\
   \tcreate    : Create a new instance of a specified type.\n\
   \tdelete    : Delete an instance of a specified type.\n\
-  \timport    : Import a policy for an instance of a specified type.\n\
-  \texport    : Export a policy for an instance of a specified type.\n\
-  \tvalidate  : Validate the policy of an instance of a specified type.\n\
+  \n\
+  Policy commands (for policy, service types):\n\
+  \n\
+  \timport   : Import a policy for an instance of a specified type.\n\
+  \texport   : Export a policy for an instance of a specified type.\n\
+  \tvalidate : Validate the policy of an instance of a specified type.\n\
+  \n\
+  Private key commands:\n\
+  \n\
+  \tcreatekey   : Create a new private key.\n\
+  \texportkey   : Export a private key as a PKCS #12 file.\n\
+  \tgeneratecsr : Generate a CSR (Certificate Signing Request)\n\
+  \timportkey   : Import a private key from a PKCS #12 file.\n\
+  \tkeypurposes : Set special purposes for a key.\n\
   \n\
   Options:\n
 
 help.types=\
   The available types are:\n\
   \n\
-  \tclusterProperty    : Configuration settings.\n\
-  \tfolder             : Organisational folders.\n\
-  \tidentityProvider   : User and group repositories.\n\
-  \tjdbcConnection     : Database connections.\n\
-  \tjmsDestination     : JMS Queues.\n\
-  \tpolicy             : Policy include fragments.\n\
-  \tprivateKey         : Private keys.\n\
-  \tservice            : Services.\n\
-  \ttrustedCertificate : Certificate store.\n\
-  \tresourceDocument   : XML Schema repository.\n\
+  \tclusterProperty          : Configuration settings.\n\
+  \tfolder                   : Organisational folders.\n\
+  \tidentityProvider         : User and group repositories.\n\
+  \tinterfaceTag             : Listen port interface tags.\n\
+  \tjdbcConnection           : Database connections.\n\
+  \tjmsDestination           : JMS Queues.\n\
+  \tlistenPort               : Listen ports.\n\
+  \tpolicy                   : Policy include fragments.\n\
+  \tprivateKey               : Private keys.\n\
+  \trevocationCheckingPolicy : Revocation checking policies.\n\
+  \tservice                  : Services.\n\
+  \tstoredPassword           : Stored passwords.\n\
+  \ttrustedCertificate       : Certificate store.\n\
+  \tresourceDocument         : XML Schema repository.\n\
 
 help.common=\
     To prevent overwriting existing files use the '-safe' option.\n\
@@ -280,5 +295,74 @@ help.command.validate=\
   \n\
   This output from this command is a policy validation report containing\n\
   any warning and error messages for assertions and the overall policy.\n\
+  \n\
+  {1}
+
+help.command.createkey=\
+  createkey: Create a new private key resource\n\
+  usage: createkey -type privateKey -id ID -inFile PATH\n\
+  \n\
+  \tCreates a private key using the resource from the file 'PATH'. The private\n\
+  \tkey resource will be output to the console.\n\
+  \n\
+  The input for this command is a resource that describes the options for the\n\
+  private key resource.\n\
+  \n\
+  {1}
+
+help.command.exportkey=\
+  exportkey: Export an identified private key resource to a PKCS #12 file\n\
+  usage: exportkey -type privateKey -id ID -keyAlias ALIAS -keyPassword PASSWORD\n\
+  \t         -outFile PATH\n\
+  \n\
+  \tExports the private key identified by ID to the file 'PATH'. The ALIAS is\n\
+  \toptional, if not specified it defaults to the alias of the private key.\n\
+  \n\
+  The output of this command is a PKCS #12 file that uses the given alias (or\n\
+  the alias of the private key) and is secured with the given password.\n\
+  \n\
+  {1}
+
+help.command.generatecsr=\
+  generatecsr: Generate a CSR for an identified private key resource\n\
+  usage: generatecsr -type privateKey -id ID -csrDn DN -outFile PATH\n\
+  \n\
+  \tGenerates a DER encoded CSR for the private key identified by ID and\n\
+  \toutputs to the file 'PATH'. The DN is optional, if not specified a DN will\n\
+  \tbe generated.\n\
+  \n\
+  The output from this command is a DER encoded CSR (Certificate Signing\n\
+  Request) for the identified private key using the given (or generated) DN.\n\
+  \n\
+  {1}
+
+help.command.importkey=\
+  importkey: Import a private key from a PKCS #12 file\n\
+  usage: importkey -type privateKey -id ID -keyAlias ALIAS -keyPassword\n\
+  \t         PASSWORD -inFile PATH\n\
+  \n\
+  \tImports a private key from the PKCS #12 file 'PATH' using the given ALIAS and\n\
+  \tPASSWORD. The ALIAS is optional if there is only one key in the PKCS #12 file\n\
+  \n\
+  The input for this command is a PKCS #12 file containing one or more private\n\
+  keys. The key to be imported is (optionally) identified by the given ALIAS.\n\
+  \n\
+  The output from this command is the newly created private key resource.\n\
+  \n\
+  {1}
+
+help.command.keypurposes=\
+  keypurposes: Set the special purposes for an identified private key resource\n\
+  usage: keypurposes -type privateKey -id ID [-keyPurpose PURPOSE]+\n\
+  \tSets the given special purposes for the identified private key.\n\
+  \n\
+  The following key purposes can be used:\n\
+  \n\
+  \tDefault SSL Key   : The key is the default SSL key\n\
+  \tDefault CA Key    : The key is the default CA key\n\
+  \tAudit Viewer Key  : The key is used for viewing audits\n\
+  \tAudit Signing Key : The key is used for signing audits\n\
+  \n\
+  The output from this command is the updated private key resource.\n\
   \n\
   {1}
