--- a/modules/gateway/gateway-api/ivy.xml
+++ b/modules/gateway/gateway-api/ivy.xml
@@ -27,5 +27,6 @@
         <dependency name="wiseman-core" org="net.java.wiseman" rev="1.0" force="true" conf="core"/>        
 
         <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
+        <dependency name="layer7-common" rev="latest.integration" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
