SSG-2879: add functionality to specify request and response size limit Add audit message size limit
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28969 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
@@ -80,3 +80,4 @@ tls-protocol.TLSv1.2=TLS 1.2
 showPassword.label=&Show Password
 showKrbPasswordCheckBox.label=&Show Password
 showProxyPasswordCheckBox.label=&Show Password
+response.byteLimit.text=Response message limit:
