--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -578,11 +578,6 @@ ioJmsResponseTimeout.description = Timeout for JMS routing to wait on the replyT
 ioJmsResponseTimeout.default = 10000
 ioJmsResponseTimeout.clusterProperty = jms.responseTimeout
 
-ioJmsMessageMaxBytes.description = Maximum number of bytes permitted for a JMS message, or 0 for unlimited (Integer)
-ioJmsMessageMaxBytes.default = 2621440
-ioJmsMessageMaxBytes.systemProperty = ${propertyPrefix}.jmsMessageMaxBytes
-ioJmsMessageMaxBytes.clusterProperty = io.jmsMessageMaxBytes
-
 ioJmsConnectionCacheMaxAge.description = Maximum age for cached JMS connections or 0 for no limit (timeunit)
 ioJmsConnectionCacheMaxAge.default = 10m
 ioJmsConnectionCacheMaxAge.clusterProperty = io.jmsConnectionCacheMaxAge
@@ -1481,6 +1476,10 @@ audit.search.maxMessageSize.description=The maximum audited message in bytes the
 audit.search.maxMessageSize.clusterProperty=audit.search.maxMessageSize
 audit.search.maxMessageSize.default=2621440
 audit.search.maxMessageSize.visible=false
+
+audit.messageSizeLimit.description=The maximum audit message in bytes the gateway will record or 0 for no limit
+audit.messageSizeLimit.default=1048576
+audit.messageSizeLimit.clusterProperty=audit.messageSizeLimit
 
 httpDigest.enable.description=Enable storage of digest password compatible with HTTP Digest
 httpDigest.enable.clusterProperty=httpDigest.enable
