SCP SFTP: working prototype continued, add session idle timeout
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28996 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
@@ -4,3 +4,4 @@ sftpLabel=SFTP
 enableLabel=Enable:
 hostPrivateKeyLabel=Host private key type:
 setHostPrivateKeyLabel=Set host private key ...
+idleTimeoutInMinsLabel=Idle timeout (in minutes):
