--- a/modules/gateway/assertions/SshAssertion/ivy.xml
+++ b/modules/gateway/assertions/SshAssertion/ivy.xml
@@ -20,7 +20,7 @@
 	</publications>
 	<dependencies>
         <dependency org="org.apache.mina" name="mina-core" rev="2.0.1" force="true" conf="core"/>
-        <dependency org="org.apache.sshd" name="sshd-core" rev="0.5.0.p96" force="true" conf="core"/>
+        <dependency org="org.apache.sshd" name="sshd-core" rev="0.5.0-p96-l7p1" force="true" conf="core"/>
         <dependency name="layer7-modular-assertions" rev="latest.integration" force="true"
                     conf="compile->compile;runtime->runtime;test->test"/>
                 
