--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
@@ -4,8 +4,6 @@ portNumberLabel=Port number:
 directoryLabel=Directory:
 fileNameLabel=File name:
 timeoutLabel=Connect timeout:
-autoGenerateFileNameLabel=Auto-generate file name
-specifyPatternLabel=Specify pattern:
 usernameLabel=Username
 passwordLabel=Password
 requiresPassword=Requires Password
@@ -34,3 +32,7 @@ uploadToLable=Upload To
 downloadFromLable=Download From
 passThroughCredentialsLabel=Pass through credentials in request
 specifyCredentialsLabel=Specify user credentials
+connectionSettingsLabel=Connection settings
+copySettingsLabel=Copy settings
+readTimeoutLabel=Read timeout:
+downloadContentTypeLabel=Content type:
