Fixed  SSM-3411. Also fixed another typo in the same properties file
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29002 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/IdProviderPasswordPolicyDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/IdProviderPasswordPolicyDialog.properties
@@ -22,8 +22,8 @@ reset.stig=Reset to STIG Minimum
 button.cancel.label = &Cancel
 button.ok.label = &OK
 
-password.min.length.error=Minimum password lenght must be greater then 0.
-password.length.error=Maximum password length is less then minimum
+password.min.length.error=Minimum password length must be greater then 0.
+password.length.error=Maximum password length is less than minimum
 repeat.frequency.error=Password repeat frequency must be greater then 0.
 expiry.error=Password expiry must be greater then 0.
 password.max.length.error=Maximum password length must be greater then 0.
