SSM-3411: Fixed all the other then -> than typos in file modules\gateway\console\src\main\resources\com\l7tech\console\panels\IdProviderPasswordPolicyDialog.properties
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29005 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/IdProviderPasswordPolicyDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/IdProviderPasswordPolicyDialog.properties
@@ -22,11 +22,11 @@ reset.stig=Reset to STIG Minimum
 button.cancel.label = &Cancel
 button.ok.label = &OK
 
-password.min.length.error=Minimum password length must be greater then 0.
+password.min.length.error=Minimum password length must be greater than 0.
 password.length.error=Maximum password length is less than minimum
-repeat.frequency.error=Password repeat frequency must be greater then 0.
-expiry.error=Password expiry must be greater then 0.
-password.max.length.error=Maximum password length must be greater then 0.
+repeat.frequency.error=Password repeat frequency must be greater than 0.
+expiry.error=Password expiry must be greater than 0.
+password.max.length.error=Maximum password length must be greater than 0.
 minimum.characters.error=Password character requirements exceed the minimum password length
 
 below.warning=Requirements are below {0} minimum
