SSG-4971: LDAP users can now optionally be located by their certificates using the LDAP certificate cache, without requiring that the login from their client cert match their DN.  There is a new LDAP identity provider config option "userLookupByCertMode" (LOGIN, CERT) which defaults to LOGIN to preserve previous behavior.  The new LDAP identity provider config property is exposed via the management API with the possible values "Common Name from Certificate" and "Entire Certificate".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29012 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -111,6 +111,9 @@ validation.option.REVOCATION=Revocation Checking
 validation.option.default=Use Default
 validation.step.description=Configure certificate validation options.
 
+userlookup.type.LOGIN=Common Name from Certificate
+userlookup.type.CERT=Entire Certificate
+
 certificateSettings.step.label=Certificate Settings
 certificateSettings.step.description=Configure certificate settings, including certificate validation options.
 certificateSettings.panel.label=Client Certificates
