SSG-2879: Enforce whole message limit for JMS/Email/TCP transport and routing assertions.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29029 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -412,7 +412,7 @@ service.disabledServiceDownloads.clusterProperty = service.disabledDownloads
 
 service.anonFederatedPolicies.description = Treat policies containing all federated identity assertions as though they contained no identity assertions, for purposes of checking whether a policy allows anonymous access.  In an identity bridging use case, this allows an XVC from another trust domain to download the policy for a federated service.  (true/false)
 service.anonFederatedPolicies.default = true
-service.anonFederatedPolicies.clusterProperty = service.anonFederatedPolicies 
+service.anonFederatedPolicies.clusterProperty = service.anonFederatedPolicies
 
 # IO timeout settings
 ioInReadTimeout.description = IO timeout for incoming requests (Milliseconds)
@@ -492,7 +492,7 @@ ioJmsErrorSleep.description = Time to sleep after a connection error for an inbo
 ioJmsErrorSleep.default = 60s
 ioJmsErrorSleep.clusterProperty = jms.connectErrorSleep
 
-ioJmsResponseTimeout.description = Timeout for JMS routing to wait on the replyTo queue in milliseconds, default 10 seconds.  
+ioJmsResponseTimeout.description = Timeout for JMS routing to wait on the replyTo queue in milliseconds, default 10 seconds.
 ioJmsResponseTimeout.default = 10000
 ioJmsResponseTimeout.clusterProperty = jms.responseTimeout
 
@@ -512,6 +512,11 @@ ioJmsEndpointListenerFactory.description = The endpoint listener type to use (Si
 ioJmsEndpointListenerFactory.default = Pooled
 ioJmsEndpointListenerFactory.clusterProperty = io.jmsEndpointListenerFactory
 ioJmsEndpointListenerFactory.visible = false
+
+ioJmsMessageMaxBytes.description = Maximum number of bytes permitted for a JMS message, or 0 for unlimited (Long)
+ioJmsMessageMaxBytes.default = 2621440
+ioJmsMessageMaxBytes.systemProperty = ${propertyPrefix}.jmsMessageMaxBytes
+ioJmsMessageMaxBytes.clusterProperty = io.jmsMessageMaxBytes
 
 ioStaleCheckCount.description = Number of stale checked connections per interval (Integer)
 ioStaleCheckCount.default = 1
@@ -781,7 +786,7 @@ samlValidateBeforeOffsetMinutes.default = 0
 samlValidateBeforeOffsetMinutes.clusterProperty = samlAssertion.validate.notBeforeOffsetMin
 samlValidateBeforeOffsetMinutes.systemProperty = ${propertyPrefix}.saml.validate.notBeforeOffsetMin
 
-samlValidateAfterOffsetMinutes.description = The number of minutes to add to a SAML assertion's NotOnOrAfter restriction during validation.  This can be used to relax the validity window to allow for clock skew.  (default=0) 
+samlValidateAfterOffsetMinutes.description = The number of minutes to add to a SAML assertion's NotOnOrAfter restriction during validation.  This can be used to relax the validity window to allow for clock skew.  (default=0)
 samlValidateAfterOffsetMinutes.default = 0
 samlValidateAfterOffsetMinutes.clusterProperty = samlAssertion.validate.notOnOrAfterOffsetMin
 samlValidateAfterOffsetMinutes.systemProperty = ${propertyPrefix}.saml.validate.notOnOrAfterOffsetMin
@@ -808,7 +813,7 @@ pkixTrust.useDefaultAnchors.default = true
 pkixTrust.useDefaultAnchors.clusterProperty = pkix.useDefaultTrustAnchors
 
 pkixTrust.permittedCriticalExtensions.description = List of critical extensions that should be permitted when validating certificates (space separated list of OIDs)
-pkixTrust.permittedCriticalExtensions.default = 
+pkixTrust.permittedCriticalExtensions.default =
 pkixTrust.permittedCriticalExtensions.clusterProperty = pkix.permittedCriticalExtensions
 
 pkixCRL.expiry.description = Default setting for CRL expiry age (timeunit)
@@ -1312,7 +1317,7 @@ xslDocMaxDownloadSize.description = Maximum size in bytes of a XSL document down
 xslDocMaxDownloadSize.default = ${documentDownload.maxSize}
 xslDocMaxDownloadSize.clusterProperty = xslDownload.maxSize
 
-otherTextualContentTypes.description=Other textual content types. Default are (text, xml, json and form encoded). Each content type must be on a new line and may include a charset e.g. application/custom; charset="UTF-8" 
+otherTextualContentTypes.description=Other textual content types. Default are (text, xml, json and form encoded). Each content type must be on a new line and may include a charset e.g. application/custom; charset="UTF-8"
 otherTextualContentTypes.clusterProperty = contentType.otherTextualTypes
 
 audit.setDetailLevel.SEVERE.description=Set the audit detail level for all listed audit codes to 'SEVERE'. Space separated list.
@@ -1358,7 +1363,7 @@ audit.search.maxMessageSize.default=2621440
 audit.search.maxMessageSize.visible=false
 
 audit.messageSizeLimit.description=The maximum audit message in bytes the gateway will record or 0 for no limit
-audit.messageSizeLimit.default=1048576
+audit.messageSizeLimit.default=10485760
 audit.messageSizeLimit.clusterProperty=audit.messageSizeLimit
 
 httpDigest.enable.description=Enable storage of digest password compatible with HTTP Digest
