SSG-2879: fix email listener using the cluster property values
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29037 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1391,3 +1391,8 @@ db.replicationErrorAuditInterval.clusterProperty = db.replicationErrorAuditInter
 gateway.3scale.reportingServer.description = The 3 scale reporting server
 gateway.3scale.reportingServer.default = http://su1.3scale.net
 gateway.3scale.reportingServer.clusterProperty = gateway.3scale.reportingServer
+
+io.EmailListenerMessageMaxBytes.description = Maximum number of bytes permitted for an email message , or 0 for unlimited (Long)
+io.EmailListenerMessageMaxBytes.default = 5242880
+io.EmailListenerMessageMaxBytes.clusterProperty = ioEmailListenerMessageMaxBytes
+io.EmailListenerMessageMaxBytes.visible = false;
