--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/ByteLimitPanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/ByteLimitPanel.properties
@@ -1,6 +1,6 @@
-unlimited.label=Unlimited
+unlimited.label=Allow unlimited message size (not recommended)
 bytes=bytes
-warning.label=(not recommended)
-max.bytes=Maximum bytes
+max.bytes=Restrict messages to
 cluster.prop.error=Error getting server value: {0}
 cluster.prop.value.error=Parameter {0} value ''{1}'' not a valid long integer, using {2} instead
+checkbox.label=Override maximum message size:
