SSM-1994: add copy button for the following managers listen port, jdbc connection, log sink, email listener, Uddi registry.  add context menu items on ldap/federal identity provider to copy.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29059 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionManagerWindow.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionManagerWindow.properties
@@ -16,3 +16,7 @@ column.label.jdbc.url=JDBC URL
 column.label.user.name=User Name
 
 confirmation.remove.connection=Are you sure you want to remove the JDBC connection, {0}?
+
+errors.saveFailed.title=Save Failed
+errors.saveFailed.message=Failed to save JDBC connection:
+button.copy=Copy
