--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/EmailListenerManagerWindow.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/EmailListenerManagerWindow.properties
@@ -4,6 +4,7 @@ window.createButton.text=Create
 window.removeButton.text=Remove
 window.propertiesButton.text=Properties
 window.closeButton.text=Close
+window.copyButton.text=Copy
 
 # Table column headers
 columns.name.title=Name
