--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/LogSinkManagerWindow.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/LogSinkManagerWindow.properties
@@ -6,6 +6,7 @@ createButton.label=Create
 removeButton.label=Remove
 propertiesButton.label=Properties
 closeButton.label=Close
+copyButton.label=Copy
 
 # Table column headers
 columns.name.title=Name
