SSG-2879: more review changes, clean up type casting and clarify code.  Fix simple raw assertion to handle context variables.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29060 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -580,6 +580,12 @@ ioJmsMessageMaxBytes.systemProperty = ${propertyPrefix}.jmsMessageMaxBytes
 ioJmsMessageMaxBytes.clusterProperty = io.jmsMessageMaxBytes
 ioJmsMessageMaxBytes.validation.type = long
 
+ioEmailMessageMaxBytes.description = Maximum number of bytes permitted for an email message, or 0 for unlimited (Integer)
+ioEmailMessageMaxBytes.default = 2621440
+ioEmailMessageMaxBytes.clusterProperty = io.emailMessageMaxBytes
+ioEmailMessageMaxBytes.validation.type = long
+ioEmailMessageMaxBytes.validation.min = 0
+
 ioStaleCheckCount.description = Number of stale checked connections per interval (Integer)
 ioStaleCheckCount.default = 1
 ioStaleCheckCount.systemProperty = com.l7tech.common.http.prov.apache.CommonsHttpClient.staleCheckCount
@@ -1602,9 +1608,3 @@ db.replicationErrorAuditInterval.validation.type = timeUnit
 gateway.3scale.reportingServer.description = The 3 scale reporting server
 gateway.3scale.reportingServer.default = http://su1.3scale.net
 gateway.3scale.reportingServer.clusterProperty = gateway.3scale.reportingServer
-
-io.EmailListenerMessageMaxBytes.description = Maximum number of bytes permitted for an email message, or 0 for unlimited (Integer)
-io.EmailListenerMessageMaxBytes.default = 5242880
-io.EmailListenerMessageMaxBytes.clusterProperty = ioEmailListenerMessageMaxBytes
-io.EmailListenerMessageMaxBytes.visible = false
-io.EmailListenerMessageMaxBytes.validation.type = long
