preliminary icap assertion
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29063 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
+++ b/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
@@ -3,7 +3,7 @@ main.button.add=&Add
 main.button.edit=&Edit
 main.button.remove=&Remove
 main.label.strategy=Failover Strategy
-main.checkbox.failAssertion=Fail assertion if virus found
+main.checkbox.failAssertion=Continue processing if virus found
 
 #entries for the server properties dialog
 server.button.ok=&OK
